fix: 批量修复编译错误